add pytorch approach

--- a/deep_learning_approach.ipynb
+++ b/deep_learning_approach.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "id": "67247918-a2ef-4cfc-8084-b814c1ebaa29",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Imports"
    ]
@@ -42,7 +44,9 @@
    "cell_type": "code",
    "execution_count": 96,
    "id": "5775cc3b-85a2-4b3d-851c-97a65934e3c9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
